# data-push-platform

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e6a8b1c437e_core_schema.py  575898f557f4_initial_empty_schema.py  798e23122f23_add_push_targets_and_push_target_ids.py  a1b2c3d4e5f6_add_last_schedule_slot.py  b2c3d4e5f6a7_studio_templates.py
backend/app/: __init__.py  config.py  deps.py  local_bootstrap.py  main.py  scheduler_main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api_tokens.py  (+10 more)
backend/app/common/: __init__.py  crypto.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/modules/: __init__.py
backend/app/plugins/: __init__.py  base.py  registry.py
backend/app/storage/: __init__.py  local.py
backend/app/worker/: __init__.py  celery_app.py  tasks.py
backend/tests/: test_models.py
backend/tests/api/: conftest.py  test_auth.py  test_channels.py  test_data_sources.py  test_editor.py  test_job_run.py  test_push_jobs.py
backend/tests/common/: test_crypto.py
backend/tests/execution/: test_pipeline.py
backend/tests/modules/: test_artboard_normalize.py  test_editor_design.py  test_html_md.py  test_html_table.py  test_ratio_colors.py  test_sql_params.py  test_studio_charts.py  test_studio_compile.py  test_studio_resolved_params.py  test_studio_visibility.py  test_templates.py
backend/tests/plugins/: test_card.py  test_datasource_mysql.py  test_datasource_sqlite.py  test_dingtalk.py  test_dingtalk_openapi_group.py  test_dingtalk_openapi_oto.py  test_dingtalk_work_notice.py  test_file_export.py  test_image_table.py  test_registry.py  test_sqlserver_datasource.py  test_text_md.py
backend/tests/scheduler/: test_runner.py
backend/tests/storage/: test_local.py
(+160 files in other folders)
