[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-push-platform"
version = "0.1.0"
description = "数据推送中台 / Data Push Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",

    "pydantic-settings",
    "celery[redis]",
    "redis",
    "httpx",
    "pymysql",
    "cryptography",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt>=4.0.1,<4.1",  # passlib 1.7.x incompatible with bcrypt 4.1+/5.x
    "pillow",
    "openpyxl",
    "croniter",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
sqlserver = [
    "pymssql",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
